[tool.poetry]
name = "mlmu"
version = "0.1.0"
description = ""
authors = ["Milos Svana <milos.svana@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
openai = "^1.54.3"
numpy = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
